<resources>
    <string name="app_name">My Semilla</string>
    <string name="perfil">Perfil</string>
    <string name="mCerrar">Cerrar sesión</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrese">Registrese</string>
    <string name="repcontraseña">Repetir Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="mPrincipal">Principal</string>
    <string name="facebook_app_id">134462087294305</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambiarfrag">Cambiar Fragment</string>
    <string name="Bombas">Bombas</string>
    <string name="title_activity_vistas">VistasActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
